# runlane

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: design.md  implementation-slice.md
.github/workflows/: ci.yml  evidence.yml  pr-policy.yml
crates/runlane/: Cargo.toml
crates/runlane-agent/: Cargo.toml
crates/runlane-agent/fixtures/freebsd/: df.txt  messages.txt  procstat.txt  service-status.txt  sockstat-listening.txt
crates/runlane-agent/fixtures/linux/: df.txt  journalctl-service.txt  procfs-process.txt  ss-listening.txt  systemctl-status.txt
crates/runlane-agent/fixtures/openbsd/: df.txt  fstat-listening.txt  messages.txt  ps.txt  rcctl-check.txt
crates/runlane-agent/src/: config.rs  main.rs  platform.rs
crates/runlane-core/: Cargo.toml
crates/runlane-core/src/: analyzer.rs  approval.rs  durable.rs  e2e.rs  fleet.rs  lib.rs  receipt.rs  runtime.rs  telegram.rs
crates/runlane-helper/: Cargo.toml
crates/runlane-helper/src/: main.rs
crates/runlane-server/: Cargo.toml
crates/runlane-server/src/: http.rs  main.rs
crates/runlane/src/: main.rs
docs/: agent-local-state.md  agent-protocol.md  architecture.md  coding-agent-brief.md  dogfood-system-scenarios.md  execution-semantics.md  fleet-repo-schema.md  helper-contract.md  operational-layer-model.md  platform-model.md  product-definition.md  project-charter.md  roadmap.md  server-state.md  user-journey-v0.1.md  verification-matrix.md  workspace-structure.md
docs/adr/: 0001-cross-platform-native-agent.md
docs/milestones/: v0.1.2-acceptance-report.md  v0.1.md
docs/process/: coding-agent-pr-workflow.md  evidence-artifacts.md
docs/process/pr-policy-fixtures/: failing-unchecked.md  passing.md
examples/fleet/allowlists/: allow-freebsd-edge-sshd-restart.yaml  allow-openbsd-edge-sshd-restart.yaml  allow-prod-web-runlane-demo-cache-cleanup.yaml  allow-prod-web-sshd-restart.yaml
examples/helper-smoke/: allowlist.yaml  lease-invalid-signature.yaml  lease-valid.yaml  request-restart.yaml
examples/inventory/: freebsd-edge-01.yaml  openbsd-edge-01.yaml  prod-web-01.yaml
examples/runbooks/: service-unhealthy.yaml
scripts/ci/: check-pr-policy.sh
scripts/release/: linux-x86_64-musl.sh
scripts/smoke/: freebsd-vm-validation.sh  linux-helper-install.sh  linux-service-unhealthy-dogfood.sh  live-http-transport.sh  openbsd-vm-validation.sh  telegram-approval-live-simulated.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+15 files in other folders)
