[workspace]
members = [
    "crates/runlane-core",
    "crates/runlane-agent",
    "crates/runlane-server",
    "crates/runlane-helper",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "BSD-2-Clause"
repository = "https://github.com/xfyyzy/runlane"
authors = ["xfyyzy"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
