[workspace]
members = [
    "crates/runlane",
    "crates/runlane-core",
    "crates/runlane-agent",
    "crates/runlane-server",
    "crates/runlane-helper",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "BSD-2-Clause"
repository = "https://github.com/xfyyzy/runlane"
authors = ["xfyyzy"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
