[package]
name = "runlane-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
runlane-core = { path = "../runlane-core" }
serde = { workspace = true }
serde_yaml = { workspace = true }

[lints]
workspace = true
