[package]
name = "runlane-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
runlane-core = { path = "../runlane-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tower = { workspace = true }

[lints]
workspace = true
